--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+        <div class="wrapper">
+            {{ content }}
+        </div>
     </div>
 
-    {% include footer.html %}
-
-  </body>
+    {% include footer.html %} {% include analytics.html %}
+</body>
 
 </html>
