--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,10 +1,10 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XKK8ZMW7D2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics_id }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XKK8ZMW7D2');
+  gtag('config', '{{ site.google_analytics_id }}');
 </script>
 
